--- a/hwk1-task3.ipynb
+++ b/hwk1-task3.ipynb
@@ -135,7 +135,7 @@
     }
    ],
    "source": [
-    "# df.shape returns (rows, columns) of a dataframe\n",
+    "# A -  df.shape returns (rows, columns) of a dataframe\n",
     "coral_div.shape"
    ]
   },
@@ -170,13 +170,13 @@
     }
    ],
    "source": [
-    "# df.columns returns column names\n",
+    "# B - df.columns returns column names\n",
     "coral_div.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {
     "tags": [],
     "vscode": {
@@ -184,61 +184,6 @@
     }
    },
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 575 entries, 0 to 574\n",
-      "Data columns (total 42 columns):\n",
-      " #   Column               Non-Null Count  Dtype  \n",
-      "---  ------               --------------  -----  \n",
-      " 0   PU_ID                575 non-null    int64  \n",
-      " 1   PU_Lat               575 non-null    float64\n",
-      " 2   PU_Lon               575 non-null    float64\n",
-      " 3   Number_of_genera     575 non-null    int64  \n",
-      " 4   Country              575 non-null    object \n",
-      " 5   Ecoregion            575 non-null    object \n",
-      " 6   Management           575 non-null    object \n",
-      " 7   Habitat              530 non-null    object \n",
-      " 8   Observer             575 non-null    object \n",
-      " 9   Depth                575 non-null    float64\n",
-      " 10  Coralcover           575 non-null    int64  \n",
-      " 11  SSTRateofRise        575 non-null    float64\n",
-      " 12  PARmax               575 non-null    float64\n",
-      " 13  Calcite              575 non-null    float64\n",
-      " 14  Dis_oxygen           575 non-null    float64\n",
-      " 15  mean.waveNRJ         575 non-null    float64\n",
-      " 16  Salinity_mean        575 non-null    float64\n",
-      " 17  andrello_reef_value  575 non-null    int64  \n",
-      " 18  andrello_nutrients   575 non-null    float64\n",
-      " 19  mean.npp             575 non-null    float64\n",
-      " 20  TT_market_hrs        575 non-null    float64\n",
-      " 21  TT_pop_hrs           575 non-null    float64\n",
-      " 22  cumDHW               575 non-null    float64\n",
-      " 23  SST_Kurtosis         575 non-null    float64\n",
-      " 24  SST_Median           575 non-null    float64\n",
-      " 25  ChlorA_median        575 non-null    float64\n",
-      " 26  andrello_sediments   575 non-null    float64\n",
-      " 27  Current_vel_mean     567 non-null    float64\n",
-      " 28  Diff_attenuation     575 non-null    float64\n",
-      " 29  Grav_NP              575 non-null    float64\n",
-      " 30  Grav_NC              575 non-null    float64\n",
-      " 31  PH                   575 non-null    float64\n",
-      " 32  SST_bimodality       575 non-null    float64\n",
-      " 33  SST_Skewness         575 non-null    float64\n",
-      " 34  ClimateStressModel   575 non-null    float64\n",
-      " 35  Netflow              575 non-null    float64\n",
-      " 36  Indegree             575 non-null    float64\n",
-      " 37  Outdegree            575 non-null    float64\n",
-      " 38  Retention            575 non-null    float64\n",
-      " 39  min_yr               575 non-null    int64  \n",
-      " 40  max_yr               575 non-null    int64  \n",
-      " 41  no_replicates        575 non-null    int64  \n",
-      "dtypes: float64(30), int64(7), object(5)\n",
-      "memory usage: 188.8+ KB\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -287,13 +232,13 @@
        "dtype: object"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# method 2 using dtypes, which only returns the columns and \n",
+    "# C - using dtypes, which returns the columns and the data types contained within them\n",
     "coral_div.dtypes"
    ]
   },
@@ -835,6 +780,7 @@
     }
    ],
    "source": [
+    "# D\n",
     "# sets the option in pandas so that it no longer truncates outputs and shows all of the columns\n",
     "pd.set_option('display.max_columns', None)\n",
     "\n",
@@ -909,6 +855,7 @@
     }
    ],
    "source": [
+    "# E \n",
     "# df.info() shows the class of the object, the columns names, the number of rows and columns, the number of non-null values in each column, and the datatype of each column \n",
     "coral_div.info()\n",
     "# we have some missing values in a few of the columns"
@@ -927,7 +874,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Update this markdown cell with your answer.*"
+    "- While both data types are numeric, `int64` means that the values are integers, or whole numbers. The `float64` data type can be a whole or decimal number. "
    ]
   },
   {
@@ -940,10 +887,70 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0          Tanzania\n",
+       "1          Tanzania\n",
+       "2          Tanzania\n",
+       "3          Tanzania\n",
+       "4          Tanzania\n",
+       "           ...     \n",
+       "570    South Africa\n",
+       "571    South Africa\n",
+       "572    South Africa\n",
+       "573    South Africa\n",
+       "574    South Africa\n",
+       "Name: Country, Length: 575, dtype: object"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# calling all of the values in the 'Country' column\n",
+    "coral_div.Country"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Tanzania', 'Mozambique', 'Kenya', 'Reunion', 'Comoros', 'Mayotte',\n",
+       "       'French Southern Territories', 'Madagascar', 'Seychelles',\n",
+       "       'South Africa', 'Mauritius'], dtype=object)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# ca\n",
+    "coral_div.Country.unique()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Update this markdown cell with your answer.*"
+    "- The output of `coral_div.Country` returns all of the observations in the 'Country' column (truncated).\n",
+    "- The output of `coral_div.Country.unique()` returns all of the levels of 'Country', or unique observations that the column contains."
    ]
   },
   {
