final commit for task 3

--- a/hwk1-task3.ipynb
+++ b/hwk1-task3.ipynb
@@ -52,7 +52,7 @@
    "source": [
     "### Dataset description\n",
     "\n",
-    "The dataset, created by the Wildlife Conservation Society, provides information on coral cover, coral taxa, and variables relating to climate change, water quality, and resource management. The data was collected between 1998-2022 and averaged for each reef cell. These variables are meant to provide a view of coral bleaching in the Western Indian Ocean. \n",
+    "The dataset, created by the Wildlife Conservation Society, provides information on coral cover, coral taxa, and variables relating to climate change, water quality, and resource management. The data was collected between 1998-2022 and averaged for each reef cell. These variables are meant to provide a view into coral bleaching in the Western Indian Ocean. \n",
     "\n",
     "Citation: Tim McClanahan. (2023). Western Indian Ocean Coral Diversity. Knowledge Network for Biocomplexity. doi:10.5063/F1K35S3H. Web. Accessed 11 Oct. 2023.\n",
     "\n",
@@ -238,7 +238,7 @@
     }
    ],
    "source": [
-    "# C - using dtypes, which returns the columns and the data types contained within them\n",
+    "# C - dtypes returns the columns and the data types contained within them\n",
     "coral_div.dtypes"
    ]
   },
@@ -856,7 +856,7 @@
    ],
    "source": [
     "# E \n",
-    "# df.info() shows the class of the object, the columns names, the number of rows and columns, the number of non-null values in each column, and the datatype of each column \n",
+    "# df.info() shows the class of the object, the column names, the number of rows and columns, the number of non-null values in each column, and the datatype of each column \n",
     "coral_div.info()\n",
     "# we have some missing values in a few of the columns"
    ]
@@ -888,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 43,
    "metadata": {
     "tags": []
    },
@@ -910,19 +910,19 @@
        "Name: Country, Length: 575, dtype: object"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# calling all of the values in the 'Country' column\n",
+    "# calls all of the values in the 'Country' column\n",
     "coral_div.Country"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 44,
    "metadata": {
     "tags": []
    },
@@ -935,13 +935,13 @@
        "       'South Africa', 'Mauritius'], dtype=object)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# calling the levels of 'Country', or unique observations in the column\n",
+    "# calls the levels of 'Country', or unique observations in the column\n",
     "coral_div.Country.unique()"
    ]
   },
@@ -3035,10 +3035,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Salinity_mean       False\n",
+       "mean.npp            False\n",
+       "Current_vel_mean     True\n",
+       "dtype: bool"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# find out which columns have NA values\n",
+    "subset.isna().any()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Update this markdown cell with your answer.*"
+    "- Adding `.any()` to `subset.isna()` returns whether each column in the dataframe has any NA values. If a column has NA values, it shows `True`. If a column doesn't have any NA values, it shows `False`."
    ]
   },
   {
@@ -3052,15 +3078,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 42,
    "metadata": {
     "vscode": {
      "languageId": "python"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Salinity_mean</th>\n",
+       "      <th>mean.npp</th>\n",
+       "      <th>Current_vel_mean</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>35.250068</td>\n",
+       "      <td>1082.196411</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100</th>\n",
+       "      <td>35.250068</td>\n",
+       "      <td>1082.196411</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Salinity_mean     mean.npp  Current_vel_mean\n",
+       "99       35.250068  1082.196411               NaN\n",
+       "100      35.250068  1082.196411               NaN"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# solve exercise here"
+    "# Use single square brackets to select the rows where 'Current_vel_mean' is NA\n",
+    "subset[subset['Current_vel_mean'].isna()]"
    ]
   }
  ],
