2nd commit, finished question 3

--- a/hwk1-task4.ipynb
+++ b/hwk1-task4.ipynb
@@ -197,15 +197,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {
+    "tags": [],
     "vscode": {
      "languageId": "python"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(120108, 8)\n",
+      "<class 'tuple'>\n",
+      "8\n"
+     ]
+    }
+   ],
    "source": [
-    "# solve exercise here"
+    "# print the shape of the dataframe\n",
+    "print(raw_eqk.shape)\n",
+    "\n",
+    "# print the type of the shape\n",
+    "print(type(raw_eqk.shape))\n",
+    "\n",
+    "# print the number of rows by indexing the tuple\n",
+    "print(raw_eqk.shape[1])"
    ]
   },
   {
@@ -219,15 +237,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {
+    "tags": [],
     "vscode": {
      "languageId": "python"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['earthquake', 'quarry blast', 'quarry', 'mining explosion',\n",
+       "       'rock burst', 'explosion', 'landslide', 'sonicboom', 'sonic boom',\n",
+       "       'anthropogenic event', 'acoustic noise'], dtype=object)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# solve exercise here"
+    "# call the unique values of the type of events\n",
+    "raw_eqk.type.unique()"
    ]
   },
   {
