--- a/hwk1-task4.ipynb
+++ b/hwk1-task4.ipynb
@@ -278,15 +278,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {
+    "tags": [],
     "vscode": {
      "languageId": "python"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>time</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>depth</th>\n",
+       "      <th>mag</th>\n",
+       "      <th>place</th>\n",
+       "      <th>type</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>ak11155107</th>\n",
+       "      <td>2014-01-31 23:53:37.000</td>\n",
+       "      <td>60.2520</td>\n",
+       "      <td>-152.7081</td>\n",
+       "      <td>90.2</td>\n",
+       "      <td>1.10</td>\n",
+       "      <td>26km S of Redoubt Volcano, Alaska</td>\n",
+       "      <td>earthquake</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>nn00436847</th>\n",
+       "      <td>2014-01-31 23:48:35.452</td>\n",
+       "      <td>37.0703</td>\n",
+       "      <td>-115.1309</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.33</td>\n",
+       "      <td>32km S of Alamo, Nevada</td>\n",
+       "      <td>earthquake</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ak11151142</th>\n",
+       "      <td>2014-01-31 23:47:24.000</td>\n",
+       "      <td>64.6717</td>\n",
+       "      <td>-149.2528</td>\n",
+       "      <td>7.1</td>\n",
+       "      <td>1.30</td>\n",
+       "      <td>12km NNW of North Nenana, Alaska</td>\n",
+       "      <td>earthquake</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                               time  latitude  longitude  depth   mag  \\\n",
+       "id                                                                      \n",
+       "ak11155107  2014-01-31 23:53:37.000   60.2520  -152.7081   90.2  1.10   \n",
+       "nn00436847  2014-01-31 23:48:35.452   37.0703  -115.1309    0.0  1.33   \n",
+       "ak11151142  2014-01-31 23:47:24.000   64.6717  -149.2528    7.1  1.30   \n",
+       "\n",
+       "                                        place        type  \n",
+       "id                                                         \n",
+       "ak11155107  26km S of Redoubt Volcano, Alaska  earthquake  \n",
+       "nn00436847            32km S of Alamo, Nevada  earthquake  \n",
+       "ak11151142   12km NNW of North Nenana, Alaska  earthquake  "
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# solve exercise here"
+    "# A - select only earthquake events by filtering\n",
+    "eqk = raw_eqk[raw_eqk['type'] == 'earthquake']\n",
+    "\n",
+    "# B - update the index of eqk to be the id column, rename variable so it's stored\n",
+    "eqk = eqk.set_index('id')\n",
+    "\n",
+    "# C - check the new index\n",
+    "eqk.head(3)"
    ]
   },
   {
@@ -302,15 +404,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "metadata": {
+    "tags": [],
     "vscode": {
      "languageId": "python"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1710\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1710"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# solve exercise here"
+    "# name the shape tuples as new variables\n",
+    "tup1 = raw_eqk.shape\n",
+    "\n",
+    "tup2 = eqk.shape\n",
+    "\n",
+    "# subtract the tuples using indexing\n",
+    "print(tup1[0] - tup2[0])\n",
+    "\n",
+    "# alternatively - using filtering. Filter for every event that's not an earthquake. Index for the rows in the shape tuple\n",
+    "raw_eqk[raw_eqk['type'] != 'earthquake'].shape[0]"
    ]
   },
   {
